fix layout issue in news

--- a/styles/_news.scss
+++ b/styles/_news.scss
@@ -24,7 +24,7 @@
         text-align: center;
     }
     &__slick-slider {
-        margin-top: 89px;
+        padding-top: 89px;
         width: 1260px;
         height: 584px;
         display: flex;
